--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Flask SocketIO Example Heroku App",
+  "name": "Flask SocketIO Example",
   "description": "A barebones example of a SocketIO app running on Python Flask and deployable via a Heroku button",
   "repository": "https://github.com/feliperyan/flasksocketio_heroku_button",
   "logo": "http://flask.pocoo.org/static/logo.png",
